apps/clubs/exutoire/website/prod/httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: exutoire
spec:
  virtualhost:
    fqdn: exutoire.etsmtl.club
    tls:
      secretName: exutoire
      minimumProtocolVersion: "1.3"
  routes:
    - conditions:
        - prefix: /
      enableWebsockets: true
      services:
        - name: exutoire-svc
          port: 80
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: exutoire-prod
spec:
  virtualhost:
    fqdn: exutoire.ca
    tls:
      secretName: exutoire-ca-tls
      minimumProtocolVersion: "1.3"
  routes:
    - conditions:
        - prefix: /
      enableWebsockets: true
      services:
        - name: exutoire-svc
          port: 80
